--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Jasmine Spec Runner v2.1.2</title>
-
-  <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.1.2/jasmine_favicon.png">
-  <link rel="stylesheet" href="lib/jasmine-2.1.2/jasmine.css">
-
-  <script src="lib/jasmine-2.1.2/jasmine.js"></script>
-  <script src="lib/jasmine-2.1.2/jasmine-html.js"></script>
-  <script src="lib/jasmine-2.1.2/boot.js"></script>
-
-  <!-- include source files here... -->
-  <script type="text/javascript" src="src/Javabuzz.js"></script>
-
-  <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/JavabuzzSpec.js"></script>
+  <head>
+    <meta charset="utf-8">
+    <title>Jasmine Spec Runner v2.0.0</title>
+    <link rel="shortcut icon" type="image/png" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.0.0/jasmine_favicon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.0.0/jasmine.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.0.0/jasmine.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.0.0/jasmine-html.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.0.0/boot.js"></script>
+    
+    <!-- include source files here... -->
+    <script type="text/javascript" src="src/bowling.js"></script>
+    <!-- include spec files here... -->
+    <script type="text/javascript" src="spec/bowling_spec.js"></script>
   
 </head>
 
 <body>
+
 </body>
 </html>
